--- a/Pokedex/app/src/main/res/values/strings.xml
+++ b/Pokedex/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Pokedex</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">ActivityLogin</string>
-    <string name="title_activity_list">ActivityList</string>
+    <string name="title_activity_list">List of Pokemon</string>
+    <string name="title_activity_detail">Detail of Pokemon</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -11,4 +13,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
 </resources>
